argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
   cert-manager.io/issuer: "letsencrypt-clusterissuer"
   nginx.ingress.kubernetes.io/rewrite-target: /
   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
   nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - "*.ingotbrokers.dev"
    secretName: letsencrypt-cert
  rules:
    - host: argocd.ingotbrokers.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: argocd-server
                port:
                  number: 8080
